conda_env/2026-02-24/joblogs/2026-01-23-19-14-test_rocksdb.err
Traceback (most recent call last):
  File "/share/org/YZWL/yzwl_lixg/.local/bin/biopytools", line 8, in <module>
    sys.exit(main())
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/main.py", line 181, in main
    cli()
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1442, in __call__
    return self.main(*args, **kwargs)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1363, in main
    rv = self.invoke(ctx)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1830, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1830, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1226, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 794, in invoke
    return callback(*args, **kwargs)
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/commands/kmc.py", line 175, in count
    kmc_main = _lazy_import_kmc_main()
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/commands/kmc.py", line 13, in _lazy_import_kmc_main
    from ...kmc.main import main as kmc_main
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/kmc/__init__.py", line 31, in <module>
    from .main import KMCManager
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/kmc/main.py", line 13, in <module>
    from .matrix_builder import KMCMatrixBuilder
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/kmc/matrix_builder.py", line 58
    opts.compression = rocksdb.CompressionType.lz4 Compression  # 快速压缩|Fast compression
                                                   ^^^^^^^^^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/share/org/YZWL/yzwl_lixg/.local/bin/biopytools", line 8, in <module>
    sys.exit(main())
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/main.py", line 181, in main
    cli()
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1442, in __call__
    return self.main(*args, **kwargs)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1363, in main
    rv = self.invoke(ctx)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1830, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1830, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 1226, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "/share/org/YZWL/yzwl_lixg/miniforge3/envs/biopytools/lib/python3.10/site-packages/click/core.py", line 794, in invoke
    return callback(*args, **kwargs)
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/commands/kmc.py", line 239, in matrix
    kmc_main = _lazy_import_kmc_main()
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/cli/commands/kmc.py", line 13, in _lazy_import_kmc_main
    from ...kmc.main import main as kmc_main
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/kmc/__init__.py", line 31, in <module>
    from .main import KMCManager
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/kmc/main.py", line 13, in <module>
    from .matrix_builder import KMCMatrixBuilder
  File "/share/org/YZWL/yzwl_lixg/software/biopytools/biopytools/kmc/matrix_builder.py", line 58
    opts.compression = rocksdb.CompressionType.lz4 Compression  # 快速压缩|Fast compression
                                                   ^^^^^^^^^^^
SyntaxError: invalid syntax
Job 69012936 stderr output:

